fix window layouts on IE

--- a/gui/war/CoreGUI.css
+++ b/gui/war/CoreGUI.css
@@ -504,8 +504,11 @@ a:focus {
     border-bottom: 1px solid #A7ABB4;
     background-color:#FFFFFF;
     background-image: url('images/sc/skins/Enterprise/images/ToolStrip/background.png');
-    padding-left:10px;
     color:#4A5D75;
+}
+
+.default-window-content {
+    margin:5px;
 }
 
 .gwt-PopupPanelGlass {
@@ -809,5 +812,16 @@ a:focus {
     width:100%;
     border-bottom: 1px solid #A7ABB4;
 }
+
+.profile-selector {
+    padding:2px;
+    border-top:1px solid #A7ABB4;
+    font-weight:bold;
+    color:#4A5D75;
+    vertical-align:middle;
+    text-align:center;
+}
+
+
 
 
